--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: simple-movie-recommender    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './../../frontend/build'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: './frontend/build'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
@@ -32,9 +32,9 @@ jobs:
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
-        npm install
+        cd frontend/ && npm install
         npm run build --if-present
-        npm run test --if-present
+        # npm run test --if-present
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v1
       with:
